# trustscore-contract

./: .gitignore  Cargo.toml  Makefile.toml  README.md  README.org  rustfmt.toml
neardev/: dev-account  dev-account.env
src/: Test.rs  lib.rs
src/application/repository/: mod.rs
src/application/service/: impl_space.rs  impl_thread.rs  impl_user.rs  mod.rs
src/models/: contract.rs  mod.rs  space.rs  thread.rs  user.rs
