[package]
name = "thread-score"
authors = ["thread score <thread-score@gmail.com>"]
edition = "2021"
version = "0.1.0"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"

[dependencies]
schemars = { version = "0.8.13"}
near-sdk = "4.1.1"
unidecode = "0.3.0"

